add button and change style

--- a/specks.html
+++ b/specks.html
@@ -10,6 +10,8 @@
   <h1 id="hSpecks">SPECKS</h1>
   <table id="table"></table>
   <button id="newGameButton">NEW GAME</button>
+  <div id="movesNum">Moves quantity: 
+<b id="counterID">0</b></div>
   <script src="specks.js"></script>
 </body>
 
