--- a/specks.html
+++ b/specks.html
@@ -8,10 +8,28 @@
 
 <body>
   <h1 id="hSpecks">SPECKS</h1>
-  <table id="table"></table>
+  <table id="tableSpecks"></table>
   <button id="newGameButton">NEW GAME</button>
   <div id="movesNum">Moves quantity: 
 <b id="counterID">0</b></div>
+  <div id="win">YOU WON!!!</div>
+  <form>
+    <p id="pName"><b>Your name: </b>
+      <input id="inputName" type="text" value="player">
+    </p>
+  </form>
+<table id="tScore"><div id="dScore">Total score</div>
+   <tr><td>1</td><td>...........</td><td>...........</td></tr>
+   <tr><td>2</td><td>...........</td><td>...........</td></tr>
+   <tr><td>3</td><td>...........</td><td>...........</td></tr>
+   <tr><td>4</td><td>...........</td><td>...........</td></tr>
+   <tr><td>5</td><td>...........</td><td>...........</td></tr>
+   <tr><td>6</td><td>...........</td><td>...........</td></tr>
+   <tr><td>7</td><td>...........</td><td>...........</td></tr>
+   <tr><td>8</td><td>...........</td><td>...........</td></tr>
+   <tr><td>9</td><td>...........</td><td>...........</td></tr>
+   <tr><td>10</td><td>...........</td><td>...........</td></tr>
+</table>
   <script src="specks.js"></script>
 </body>
 
